--- a/src/index.css
+++ b/src/index.css
@@ -226,3 +226,31 @@ div {
     padding: 0;
 }
 
+.hidden {
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: all 0.5s;
+}
+
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+}
+
+.show {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.icon:nth-child(1) {
+    transition-delay: 2s;
+}
+
+.icon:nth-child(2) {
+    transition-delay: 4s;
+}
+
+.icon:nth-child(3) {
+    transition-delay: 10s;
+}
