--- a/src/index.css
+++ b/src/index.css
@@ -228,29 +228,43 @@ div {
 
 .hidden {
     opacity: 0;
+    transition: opacity 0.5s, transform 0.5s;
     transform: translateX(-100%);
-    transition: all 0.5s;
 }
 
-@media(prefers-reduced-motion) {
-    .hidden {
-        transition: none;
-    }
+.hidden.personal-summary {
+    transform: translateX(0%);
+}
+
+.hidden.icon {
+    transform: translateX(100%);
+}
+
+.show.icon {
+    transform: translateX(0%);
+}
+
+.icon:nth-child(1) {
+    transition-delay: 0.1s;
+}   
+
+.icon:nth-child(2) {
+    transition-delay: 0.2s;
+}
+
+.icon:nth-child(3) {
+    transition-delay: 0.3s;
 }
 
 .show {
     opacity: 1;
     transform: translateX(0);
+    filter: blur(0);
 }
 
-.icon:nth-child(1) {
-    transition-delay: 2s;
-}
 
-.icon:nth-child(2) {
-    transition-delay: 4s;
-}
-
-.icon:nth-child(3) {
-    transition-delay: 10s;
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
 }
