icon delay if inally working

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 * {
-    background-color: #e7daff10;
+    background-color: #e7daff;
     color: #183EAF;
 
 }
@@ -51,7 +51,7 @@ div {
     margin-right: 14rem;
 }
 
-.icon {
+.icon-img {
     width: 3rem;
     border-radius: 50%;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
@@ -233,7 +233,15 @@ div {
 }
 
 .hidden.personal-summary {
+    opacity: 0;
+    filter: blur(5px);
     transform: translateX(0%);
+    transition: 1s;
+}
+
+.show.hidden.personal-summary {
+    filter:blur(0);
+    opacity: 1;
 }
 
 .hidden.icon {
@@ -242,18 +250,6 @@ div {
 
 .show.icon {
     transform: translateX(0%);
-}
-
-.icon:nth-child(1) {
-    transition-delay: 0.1s;
-}   
-
-.icon:nth-child(2) {
-    transition-delay: 0.2s;
-}
-
-.icon:nth-child(3) {
-    transition-delay: 0.3s;
 }
 
 .show {
@@ -267,4 +263,17 @@ div {
     .hidden {
         transition: none;
     }
+}
+
+/* Adjusting transition delays for icons */
+.icon:nth-child(1) {
+    transition-delay: 100ms; 
+}
+
+.icon:nth-child(2) {
+    transition-delay: 300ms; 
+}
+
+.icon:nth-child(3) {
+    transition-delay: 500ms; /* Start after 1.5 seconds */
 }
