--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 }
 
 * {
-    background-color: #e7daff10;
+    background-color: #e7daff;
     color: #183EAF;
 
 }
@@ -43,6 +43,15 @@ div {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+section {
+    width: 100vw; /* Full viewport width */
+    height: 100vh; /* Full viewport height */
+    display: flex; /* Flexbox for alignment */
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0; /* Optional background */
+}
+
 #about-content {
     display: flex;
     flex-direction: row;
@@ -67,24 +76,6 @@ div {
 
 /* Stacked on mobile */
 @media (max-width: 768px) {
-    #about-content {
-        flex-direction: column;
-        margin-left: 1rem;
-        margin-right: 1rem;
-    }
-
-    #resume-content {
-        flex-direction: column;
-        margin-left: 1rem;
-        margin-right: 1rem;
-    }
-
-    .resume-section {
-        flex-direction: column;
-        margin-left: 1rem;
-        margin-right: 1rem;
-    }
-
 
     div {
         margin: 0;
@@ -96,8 +87,6 @@ div {
         flex-direction: row;
         justify-content: flex-end;
     }
-
-
 
 }
 
@@ -111,94 +100,6 @@ div {
     margin-right: 14rem;
 }
 
-#resume-content {
-
-    margin-left: 10rem;
-    margin-right: 14rem;
-    border-color: red;
-}
-
-
-#scholarship {
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    padding: 0;
-    margin-right: 1rem;
-}
-
-#scholarship img {
-    height: 20px;
-    width: 20px;
-    align-self: center;
-    box-shadow: none;
-}
-
-#utoronto-img {
-    padding: 0;
-    width: 80px;
-    height: 80px;
-}
-
-#uhnder-img {
-    padding: 0;
-    width: 40px;
-    height: 40px;
-    padding: 20px;
-    border-radius: 50%;
-}
-
-
-#degree-container {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 5%;
-    margin: 0;
-    padding: 0;
-    min-width: 400px;
-    max-width: 570px;
-
-}
-
-.skill-container {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 5%;
-    margin: 1rem;
-    padding: 1rem;
-
-}
-
-#degree-container h2,
-#degree-container h3,
-#work-container h2,
-#work-container h3 {
-    margin: 0;
-    padding: 0;
-}
-
-#degree-title {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-}
-
-#course-container  {
-    flex: 1;
-    min-width: 200;
-    max-width: 400px;
-    margin-left: 1rem;
-}
-
-#course-container h3, 
-#course-container li {
-    color: #183EAF;
-}
-
-#contact-content {
-    margin-left: 10rem;
-    margin-right: 14rem;
-    
-}
 
 
 #first-name {
