--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -19,7 +19,7 @@
     font-size: large;
     font-weight: 400;
     text-decoration: none;
-    transition: font-weight 0.3s ease-in-out; /* Add the transition property */
+    transition: font-weight 0.3s ease-in-out;
 }
 
 .navLink:hover {
