--- a/src/components/HomePage/Recent/Recent.module.css
+++ b/src/components/HomePage/Recent/Recent.module.css
@@ -1,11 +1,12 @@
 .recentSection {
-  
+  padding-top: 5rem;
 }
 
 .title {
   margin: 4rem 23rem 0 15rem;
-  font-weight: 400;
+  font-weight: 500;
   font-size: xx-large;
+
 }
 
 .grid {
