--- a/src/components/HomePage/Recent/Recent.module.css
+++ b/src/components/HomePage/Recent/Recent.module.css
@@ -1,9 +1,10 @@
 .recentSection {
-  padding-top: 5rem;
+  padding-top: 0rem;
+  padding-bottom: 2rem;
 }
 
 .title {
-  margin: 4rem 23rem 0 15rem;
+  margin: 1rem 23rem 0 15rem;
   font-weight: 500;
   font-size: xx-large;
 
