--- a/src/components/ProjectsPage/BigProject/BigProject.module.css
+++ b/src/components/ProjectsPage/BigProject/BigProject.module.css
@@ -1,6 +1,5 @@
 .projectContainer {
   padding: 1rem;
-  border: 1px solid red; 
 }
 
 .projectContainer h2 {
@@ -8,6 +7,7 @@
   font-weight: 900;
   padding: 0rem;
   margin: 0rem;
+  text-align: left;
 }
 
 .content {
@@ -15,7 +15,7 @@
   padding: 0rem 1rem 0rem 1rem;
 }
 
-.content img {
+.projectImage {
   padding-right: 1rem;
 }
 
@@ -27,6 +27,7 @@
   padding: 0rem 1rem 0rem 1.5rem;
   font-size: 20px;
   font-weight: 600;
+  text-align: left;
 }
 
 .skills p{
