continued work on projects

--- a/src/components/ProjectsPage/ProjectsPage.module.css
+++ b/src/components/ProjectsPage/ProjectsPage.module.css
@@ -1,11 +1,24 @@
 .projectsPage {
-  margin: 0 15rem 0 15rem;
+  margin: 0 15rem 0 10rem;
 }
 
-.projectsPage h1 {
 
+.next {
+  transition: all 0.25s ease-in-out;
+  right: 0;
+  border-radius: 25px;
+  outline: 0;
+  position: absolute;
+  z-index: 2;
+  cursor: pointer;
+  top: 0;
+  bottom: 0;
+  margin-top: 0;
+  padding: 5px;
+  background-color: #e2e0f2;
+  border: 0 solid transparent;
 }
 
-.projectsPage p {
-
+.next:hover {
+  background-color: #dcd9f0;
 }
