--- a/src/components/ProjectsPage/BigProject/BigProject.module.css
+++ b/src/components/ProjectsPage/BigProject/BigProject.module.css
@@ -24,7 +24,7 @@
 }
 
 .content p {
-  padding: 0rem 1rem 0rem 1.5rem;
+  padding: 0rem 1rem 0rem 0rem;
   font-size: 20px;
   font-weight: 600;
   text-align: left;
@@ -32,4 +32,8 @@
 
 .skills p{
   margin: 0rem;
+}
+
+.space {
+  height: 25px;
 }
