--- a/src/components/ProjectsPage/SmallProject/SmallProject.module.css
+++ b/src/components/ProjectsPage/SmallProject/SmallProject.module.css
@@ -1,33 +1,18 @@
 .projectContainer {
-  padding: 1rem;
-  width: min-content;
-  border: 1px solid red;
+  margin: 1rem;
+  text-align: left;
 }
 
-.projectContainer h2 {
-  font-size: 30px;
-  font-weight: 900;
+.projectContainer:hover {
+  background-color: red;
+}
+
+.projectContainer p {
   padding: 0rem;
   margin: 0rem;
 }
 
-.content {
-  padding: 0rem 1rem 0rem 1rem;
+.projectContainer h2 {
+  padding-bottom: 0rem;
+  margin-bottom: 0rem;
 }
-
-.content img {
-  border: 1px solid red;
-}
-
-.title {
-  padding: 0rem 1rem 0rem 1rem;
-}
-
-.content p {
-  border: 1px solid red;
-  padding: 0;
-  margin-top: 0.5rem;
-  font-size: 20px;
-  font-weight: 500;
-}
-
