reorganized pages and components, also linked project cards to pages

--- a/src/components/BigProject/BigProject.module.css
+++ b/src/components/BigProject/BigProject.module.css
@@ -2,6 +2,18 @@
   padding: 1rem;
 }
 
+.projectContainer a {
+  text-decoration: none;
+  color: inherit
+}
+
+.projectContainer:hover {
+  transition: all 0.25s ease-in-out;
+  transform: scale(1.02);
+  color: #796fcd;
+}
+
+
 .projectContainer h2 {
   font-size: 40px;
   font-weight: 900;
